# XTrace

./: .gitignore  README.md  osint_tool.py  pyproject.toml  requirements.txt  setup.bat  setup.sh  xtrace.py
modules/: colors.py  domain.py  email.py  ip.py  phone.py  photo.py  username.py  utils.py
reports/: domain_report_20251211_002031.html  ip_report_20251211_001922.html  photo_report_20251211_003942.html  username_report_20251211_001755.html
result/: domain_20251211_002031.json  domain_20251211_103043.json  email_20251211_103016.json  ip_20251211_001922.json  ip_20251211_103147.json  osint_results_20251210_234741.json  osint_results_20251210_235009.json  phone_20251211_103119.json  photo_20251211_001133.json  photo_20251211_001154.json  photo_20251211_001743.json  photo_20251211_003325.json  photo_20251211_003942.json  photo_20251211_103232.json  username_20251211_001755.json  username_20251211_003309.json  username_20251211_101346.json  username_20251211_102936.json
