[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xtrace"
version = "3.0.0"
description = "XTrace - Advanced OSINT Intelligence Platform"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "dnspython>=2.4.0",
    "Pillow>=10.0.0"
]

[project.scripts]
xtrace = "xtrace:main"
